# api/src/main/java/com/gemstoneseekers/dtos/response/OptionResultResponse.java
@@ -1,0 +1,7 @@
+package com.gemstoneseekers.dtos.response;
+
+public record OptionResultResponse(
+    Long id,
+    String optionText,
+    boolean isCorrect
+) {}
