# api/src/main/resources/static/openapi.yml
@@ -576,6 +576,25 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/BaseResponseCompleteRegistrationResponse"
+  /api/v1/tests/{testId}/result:
+    get:
+      tags:
+      - test-controller
+      operationId: getTestResult
+      parameters:
+      - name: testId
+        in: path
+        required: true
+        schema:
+          type: string
+          format: uuid
+      responses:
+        "200":
+          description: OK
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/BaseResponseTestDetailedResultResponse"
   /api/v1/tests/history:
     get:
       tags:
@@ -1639,6 +1658,82 @@ components:
           type: string
         documentNumber:
           type: string
+    BaseResponseTestDetailedResultResponse:
+      type: object
+      properties:
+        success:
+          type: boolean
+        message:
+          type: string
+        result:
+          $ref: "#/components/schemas/TestDetailedResultResponse"
+        error:
+          $ref: "#/components/schemas/ErrorResponse"
+    OptionResultResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        optionText:
+          type: string
+        isCorrect:
+          type: boolean
+    QuestionResultResponse:
+      type: object
+      properties:
+        questionId:
+          type: integer
+          format: int64
+        statement:
+          type: string
+        selectedOptionId:
+          type: integer
+          format: int64
+        correctOptionId:
+          type: integer
+          format: int64
+        isCorrect:
+          type: boolean
+        options:
+          type: array
+          items:
+            $ref: "#/components/schemas/OptionResultResponse"
+    TestDetailedResultResponse:
+      type: object
+      properties:
+        testId:
+          type: string
+          format: uuid
+        technologyName:
+          type: string
+        status:
+          type: string
+          enum:
+          - IN_PROGRESS
+          - COMPLETED
+          - CANCELED
+        difficulty:
+          type: string
+          enum:
+          - BEGINNER
+          - INTERMEDIATE
+          - ADVANCED
+        score:
+          type: number
+        totalQuestions:
+          type: integer
+          format: int32
+        correctAnswers:
+          type: integer
+          format: int32
+        completedAt:
+          type: string
+          format: date-time
+        questions:
+          type: array
+          items:
+            $ref: "#/components/schemas/QuestionResultResponse"
     TestHistoryFilterParams:
       type: object
       properties:
